--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -1,9 +1,9 @@
-FROM rust:1.68-alpine3.17
+FROM rust:1.68
 WORKDIR /api
 ENV DATABASE_URL = "mysql://user:password@db:3306/CAMPI"
 COPY . .
 RUN cargo prisma generate
-
 COPY . .
+EXPOSE 3000
 CMD ["cargo", "dev"]
 
