--- a/src/api/Cargo.toml
+++ b/src/api/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
-prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5", default-features = false, features = ["migrations", "mysql"] }
-prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5", default-features = false, features = ["migrations", "mysql"] }
+diesel = {version = "1.4.4", features = ["mysql", "chrono"]}
+chrono = "^0"
+dotenv = "0.15.0"
 serde = {version="^1"}
 uuid = {version="^0.8", features=["v4"]}
 env_logger = "0.8"
